--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.8.5",
+    "@nuxtjs/axios": "^5.9.3",
     "@nuxtjs/sitemap": "^2.0.1",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.2.1",
